CHANGES IN VERSION 0.1.48 (2012-02-12)

 o Added functions: GetVaalipiiri, GetPresidentti2012Results
 o XML removed from dependencies (problems with R-forge Windows builds)

CHANGES IN VERSION 0.1.47 (2012-02-03)

 o function PlotMatrix added
 o RBGL added to dependencies, this is required by PlotMatrix

CHANGES IN VERSION 0.1.46 (2012-02-02)
  
 o added matrixOperations.R: CenterData and UnitScale functions
 o added functions for analyzing the Finnish presidential election data from
   Helsingin Sanomat in vaalit.R
 o removed maakunta.R source file and removed function GetMaakuntainfo
   and merged with GetProvinceInfo
 o in FindProvince function argument name change: municipality.list ->
   municipalities

CHANGES IN VERSION 0.1.44 (2011-12-31)

 o updated GetShapeMML and documentation, and recreated MML.rda

CHANGES IN VERSION 0.1.43 (2011-12-29)

 o GoogleStyleGuide issues completed
 o examples updated
 o vignette updated
 o GitHub taken into use for release version

CHANGES IN VERSION 0.1.42 (2011-12-27)

 o get.population.register -> GetPopulationRegister
 o preprocess.px -> GetPXTilastokeskus
 o shape2sorvi -> ReadShape
 o visualize.shape -> PlotShape
 o Added internal function is.url

CHANGES IN VERSION 0.1.41 (2011-12-27)

 o WMS functionality included
 o Added wms.R 
 o Added functions PreprocessWMS, GetWMSlayers, LoadWMSurl, 
   GetWMSraster and ListWMSurls
 o Added internal functions BuildService and GetCapabilities
 o Modified AllClasses.R
 o Added classes WMS and WMSLayer
 o Added example 20111127-OIVAwms.R

CHANGES IN VERSION 0.1.40 (2011-12-26)

 o get.geocode.GoogleMaps -> GetGeocodeGoogleMaps
 o get.staticmap.GoogleMaps -> GetStaticmapGoogleMaps
 o get.geocode.OpenStreetMap -> GetGeocodeOpenStreetMap
 o preprocess.PKS.aluejakokartat -> GetHRIaluejakokartat
 o preprocess.PKS.lukiot -> GetLukiot
 o getPresidentti2012Data -> GetPresidentti2012
 o load.migration.data -> GetWorldbankMigration
 o load.apurahat -> GetApurahat