@@ -3,6 +3,7 @@ export(ConvertGADMPosition2Region)
 export(dfsort)
 export(FindProvince)
 export(GetApurahat)
+export(GetElectionResultsPresidentti2012)
 export(GetGADM)
 export(GetGeocodeGoogleMaps)
 export(GetGeocodeOpenStreetMap)
@@ -15,7 +16,6 @@ export(GetOikotie)
 export(GetPopulationRegister)
 export(GetPostalCodeInfo)
 export(GetPresidentti2012)
-export(GetPresidentti2012Results)
 export(GetProvinceInfo)
 export(GetPXTilastokeskus)
 export(GetStaticmapGoogleMaps)
